--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,9 @@
 			<footer class="main" id="f1">
 				<a href="http://es.wikipedia.org/wiki/Quiz">
 					¿Que es un Quiz?
+				</a><p>
+				<a href="https://github.com/ahurtadom/quiz">
+					Pagina del proyecto en GitHub...
 				</a>
 			</footer>
 		</div>
