--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,8 @@
+<form method="get" action="/quizes">
+	<input type="text" name="search" value="texto_a_buscar"/>
+	<input type="submit" value="Enviar">
+</form>
+
 <table>
   <% var i; for (i=0; i < quizes.length; i++) { %>        
     <tr>
